--- a/bnwie/Base.lproj/Main.storyboard
+++ b/bnwie/Base.lproj/Main.storyboard
@@ -21,13 +21,13 @@
                                 <rect key="frame" x="199" y="279" width="202" height="42"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by FirstViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
                                 <rect key="frame" x="203" y="329" width="194.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -61,13 +61,13 @@
                                 <rect key="frame" x="176" y="279" width="248" height="42"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan">
                                 <rect key="frame" x="192" y="329" width="215.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -88,11 +88,11 @@
         <!--More tab-->
         <scene sceneID="1r4-1R-6aN">
             <objects>
-                <tableViewController id="7iD-AE-esG" userLabel="More tab" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="E2c-zw-Cjg">
+                <tableViewController id="7iD-AE-esG" userLabel="More tab" customClass="MoreViewController" customModule="bnwie" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="E2c-zw-Cjg">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <sections>
                             <tableViewSection id="1YG-eW-oaC">
                                 <cells>
@@ -107,7 +107,7 @@
                                                     <rect key="frame" x="60" y="0.0" width="493" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="first" id="god-ot-jCJ">
@@ -128,7 +128,7 @@
                                                     <rect key="frame" x="60" y="0.0" width="501" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="second" id="GfX-hV-xXm">
@@ -149,7 +149,7 @@
                                                     <rect key="frame" x="60" y="0.0" width="525" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="first" id="cDc-qj-N7X">
@@ -171,16 +171,18 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qo6-fn-91A">
-                                                    <rect key="frame" x="274" y="7" width="52" height="30"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                                     <state key="normal" title="Log out"/>
                                                     <connections>
-                                                        <segue destination="AUA-Cd-dR7" kind="show" id="gaG-bV-boK"/>
+                                                        <action selector="doLogOut" destination="7iD-AE-esG" eventType="touchUpInside" id="65L-if-gga"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Qo6-fn-91A" firstAttribute="centerX" secondItem="lMc-Ei-38w" secondAttribute="centerX" id="7aR-wz-ULz"/>
-                                                <constraint firstItem="Qo6-fn-91A" firstAttribute="centerY" secondItem="lMc-Ei-38w" secondAttribute="centerY" id="gxQ-om-bdd"/>
+                                                <constraint firstAttribute="bottom" secondItem="Qo6-fn-91A" secondAttribute="bottom" id="74c-ds-tV9"/>
+                                                <constraint firstItem="Qo6-fn-91A" firstAttribute="leading" secondItem="lMc-Ei-38w" secondAttribute="leading" id="7PB-Go-nFR"/>
+                                                <constraint firstAttribute="trailing" secondItem="Qo6-fn-91A" secondAttribute="trailing" id="Yiw-7X-KZn"/>
+                                                <constraint firstItem="Qo6-fn-91A" firstAttribute="top" secondItem="lMc-Ei-38w" secondAttribute="top" id="hYC-jU-e1r"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -193,15 +195,18 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" systemItem="more" id="utp-gM-1bw"/>
+                    <connections>
+                        <segue destination="AUA-Cd-dR7" kind="showDetail" identifier="More2Landing" animates="NO" id="zdb-mR-ktZ"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cu2-fF-j4P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="551" y="443"/>
+            <point key="canvasLocation" x="-761" y="935"/>
         </scene>
         <!--Login page-->
         <scene sceneID="pqh-ha-eMb">
             <objects>
-                <viewController id="AUA-Cd-dR7" userLabel="Login page" sceneMemberID="viewController">
+                <viewController id="AUA-Cd-dR7" userLabel="Login page" customClass="LoginVC" customModule="bnwie" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6hX-Um-hnY"/>
                         <viewControllerLayoutGuide type="bottom" id="mze-vN-fgA"/>
@@ -210,15 +215,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KSZ-2w-Fpf">
-                                <rect key="frame" x="226" y="285" width="150" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KSZ-2w-Fpf">
+                                <rect key="frame" x="225" y="285" width="150" height="30"/>
                                 <state key="normal" title="Sign in with Facebook"/>
                                 <connections>
-                                    <segue destination="49e-Tb-3d3" kind="show" id="FAG-HE-4qP"/>
+                                    <action selector="doSignInWithFbWithSender:forEvent:" destination="AUA-Cd-dR7" eventType="touchUpInside" id="1Hj-2k-I3f"/>
+                                    <segue destination="49e-Tb-3d3" kind="showDetail" identifier="Landing2Main" animates="NO" action="showViewController:sender:" id="C7R-7L-g77"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="KSZ-2w-Fpf" firstAttribute="centerY" secondItem="Xlp-1e-XMM" secondAttribute="centerY" id="ERw-47-hVf"/>
                             <constraint firstItem="KSZ-2w-Fpf" firstAttribute="centerX" secondItem="Xlp-1e-XMM" secondAttribute="centerX" id="SJj-zW-KNf"/>
@@ -232,7 +238,7 @@
         <!--Main page with tabs-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController modalTransitionStyle="flipHorizontal" id="49e-Tb-3d3" userLabel="Main page with tabs" sceneMemberID="viewController">
+                <tabBarController id="49e-Tb-3d3" userLabel="Main page with tabs" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
