--- a/ios/bnwie/Base.lproj/Main.storyboard
+++ b/ios/bnwie/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Activity tab-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" userLabel="Activity tab" customClass="FirstViewController" customModule="bnwie" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" userLabel="Activity tab" customClass="FirstViewController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -48,7 +48,7 @@
         <!--My Profile tab-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" userLabel="My Profile tab" customClass="SecondViewController" customModule="bnwie" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" userLabel="My Profile tab" customClass="SecondViewController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
@@ -88,7 +88,7 @@
         <!--More tab-->
         <scene sceneID="1r4-1R-6aN">
             <objects>
-                <tableViewController id="7iD-AE-esG" userLabel="More tab" customClass="MoreViewController" customModule="bnwie" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="7iD-AE-esG" userLabel="More tab" customClass="MoreViewController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="E2c-zw-Cjg">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -206,7 +206,7 @@
         <!--Login page-->
         <scene sceneID="pqh-ha-eMb">
             <objects>
-                <viewController id="AUA-Cd-dR7" userLabel="Login page" customClass="LoginVC" customModule="bnwie" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="AUA-Cd-dR7" userLabel="Login page" customClass="LoginVC" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6hX-Um-hnY"/>
                         <viewControllerLayoutGuide type="bottom" id="mze-vN-fgA"/>
